# CloudTool2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  note.md  tree.txt
base/: CMakeLists.txt  cloud.cpp  cloud.h  cloudtree.cpp  cloudtree.h  cloudview.cpp  cloudview.h  common.cpp  common.h  console.cpp  console.h  customdialog.h  customdock.h  customtree.cpp  customtree.h  fieldmappingdialog.h  fileio.cpp  fileio.h  globalshiftdialog.cpp  globalshiftdialog.h  processingdialog.h  txtexportdialog.h  txtimportdialog.h
cloudtool/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
cloudtool/edit/: boundingbox.cpp  boundingbox.h  color.cpp  color.h  ui_boundingbox.h  ui_color.h
cloudtool/plugins/: changedetectplugin.cpp  changedetectplugin.ui  csf.cpp  csf.h  csf.ui  csfdialog.cpp  csfdialog.h  csfplugin.cpp  csfplugin.h  csfplugin.ui  vegplugin.cpp  vegplugin.h
cloudtool/resources/: res.qrc
cloudtool/tool/: cutting.cpp  cutting.h  descriptor.cpp  descriptor.h  descriptor.ui  filters.cpp  filters.h  filters.ui  keypoints.h  pickpoints.cpp  pickpoints.h  pickpoints.ui  python_console.cpp  python_console.h  python_editor.cpp  python_editor.h  rangeimage.cpp  rangeimage.h  registration.cpp  registration.h  registration.ui  sampling.cpp
core/: CMakeLists.txt  cloud.cpp  cloud.h  cloudtype.h  cloudview.cpp  cloudview.h  common.h  exports.h  fileio.cpp  fileio.h  octree.h  octreerenderer.cpp  octreerenderer.h
data/: rabbit.las  rabbit_align.pcd
docs/: python环境管理.md  项目结构重构设计方案.md
libs/algorithm/: CMakeLists.txt  csffilter.cpp  csffilter.h  distancecalculator.cpp  distancecalculator.h  features.cpp  features.h  filters.cpp  filters.h  keypoints.cpp  keypoints.h  registration.cpp  registration.h  utils.h  vegfilter.cpp  vegfilter.h
libs/core/: CMakeLists.txt  cloud.cpp  cloud.h  cloudview.cpp  cloudview.h  common.cpp  common.h  exports.h  field_types.h  octree.h
libs/io/: CMakeLists.txt  fileio.cpp  fileio.h
libs/python/: CMakeLists.txt  python_bindings.cpp  python_bridge.cpp  python_bridge.h  python_manager.h
libs/ui/: CMakeLists.txt
libs/ui/base/: cloudtree.cpp  cloudtree.h  customdialog.h  customdock.h  customtree.cpp  customtree.h
libs/ui/dialog/: fieldmappingdialog.h  globalshiftdialog.h  txtexportdialog.h  txtimportdialog.h
libs/viz/: CMakeLists.txt  cloudview.cpp  cloudview.h  console.h  octreerenderer.h
modules/: CMakeLists.txt  csffilter.cpp  csffilter.h  distancecalculator.cpp  features.cpp  features.h  filters.cpp  filters.h  keypoints.h  registration.cpp  registration.h  utils.h  vegfilter.cpp  vegfilter.h
python/: CMakeLists.txt  python_bindings.cpp  python_bridge.cpp  python_bridge.h  python_manager.cpp  python_manager.h  python_worker.cpp  python_worker.h
src/: CMakeLists.txt
src/app/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/edit/: boundingbox.cpp  boundingbox.h  boundingbox.ui  color.cpp  color.h  color.ui
src/plugins/: changedetectplugin.cpp  changedetectplugin.h  csfplugin.cpp  csfplugin.h  vegplugin.cpp  vegplugin.h
src/python/: python_console.cpp  python_editor.cpp  python_editor.h
src/resources/: res.qrc
src/tool/: cutting.cpp  cutting.h  descriptor.cpp  descriptor.h  filters.cpp  filters.h  filters.ui  keypoints.cpp  keypoints.ui  pickpoints.cpp  pickpoints.h  rangeimage.cpp  rangeimage.h  rangeimage.ui  registration.cpp  registration.h  sampling.cpp  sampling.h
widgets/: CMakeLists.txt  cloudtree.cpp  cloudtree.h  customdialog.h  customdock.h  customtree.cpp  customtree.h
widgets/common_ui/: fieldmappingdialog.h  globalshiftdialog.cpp  globalshiftdialog.h  globalshiftdialog.ui  txtexportdialog.h
